--- a/FunctionApp/FunctionApp.csproj
+++ b/FunctionApp/FunctionApp.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
+    <PackageReference Include="Octokit" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
