--- a/.github/workflows/master_functionapp-testgit.yml
+++ b/.github/workflows/master_functionapp-testgit.yml
@@ -4,10 +4,7 @@
 name: Build and deploy dotnet core app to Azure Function App - functionapp-testgit
 
 on:
-  push:
-    branches:
-      - master
-  workflow_dispatch:
+  [push]
 
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
@@ -21,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup DotNet ${{ env.DOTNET_VERSION }} Environment
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
