--- a/.github/workflows/master_functionapp-testgit.yml
+++ b/.github/workflows/master_functionapp-testgit.yml
@@ -18,6 +18,12 @@ jobs:
   build-and-deploy:
     runs-on: windows-latest
     steps:
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: |
+          echo "$GITHUB_CONTEXT"
+          
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v2
 
