--- a/.github/workflows/master_functionapp-testgit.yml
+++ b/.github/workflows/master_functionapp-testgit.yml
@@ -15,15 +15,19 @@ env:
   DOTNET_VERSION: '6.0.x' # set this to the dotnet version to use
 
 jobs:
+  printJob:    
+    name: Print event
+    runs-on: windows-latest
+    steps:
+    - name: Dump GitHub context
+      env:
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+      run: |
+        echo "$GITHUB_CONTEXT"
+        
   build-and-deploy:
     runs-on: windows-latest
     steps:
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: |
-          echo "$GITHUB_CONTEXT"
-          
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v2
 
