--- a/.github/workflows/master_demoazure-function.yml
+++ b/.github/workflows/master_demoazure-function.yml
@@ -7,6 +7,11 @@ on:
   push:
     branches:
       - master
+      - test
+      - test1
+      - test2
+      - test3
+      - ngocthao
   workflow_dispatch:
 
 env:
